--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Tahseen Islam Portfolio</title>
+    <!--
+      PRELOAD IMAGES
+     -->
+    <link rel="preload" as="image" href="../src/assets/home.webp" />
+    <link rel="preload" as="image" href="../src/assets/homeNight.webp" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
