--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
     <!--
       PRELOAD IMAGES
      -->
-    <link rel="preload" as="image" href="../src/assets/home.webp" />
-    <link rel="preload" as="image" href="../src/assets/homeNight.webp" />
+    <!-- <link rel="preload" as="image" href="../src/assets/home.webp" />
+    <link rel="preload" as="image" href="../src/assets/homeNight.webp" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
