added ahref SEO link for verification

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Tahseen Islam's personal ePortfolio" />
+    <meta
+      name="ahrefs-site-verification"
+      content="d081c886cb64e8038ae2548e70a2ac33b039058147fc096da10aa2ac70400ec7"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
