--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,20 @@
      -->
     <!-- <link rel="preload" as="image" href="../src/assets/home.webp" />
     <link rel="preload" as="image" href="../src/assets/homeNight.webp" /> -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-M5BF59RLG3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-M5BF59RLG3');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
